little bit refactoring